--- a/portadas/enlaces/1/index.html
+++ b/portadas/enlaces/1/index.html
@@ -14,14 +14,15 @@
         <div class="bocchi">
             <img src="bocchi.jpg">
         </div>
-        
-        <div class="box">
-            <h2>clikea aqui</h2>
-            <a href="../2/index.html">clikea aqui para ver camas</a>
-        </div>
-        <div class="box">
-            <h2>clikea aqui</h2>
-            <a href="../3/index.html">Juegos gratis para jugar</a>
+        <div class="box-enlaces">
+            <div class="box">
+                <h2>clikea aqui</h2>
+                <a href="../2/index.html">clikea aqui para ver camas</a>
+            </div>
+            <div class="box">
+                <h2>clikea aqui</h2>
+                <a href="../3/index.html">Juegos gratis para jugar</a>
+            </div>
         </div>
     </body>
-</html>`
+</html>
