--- a/portadas/enlaces/3/index.html
+++ b/portadas/enlaces/3/index.html
@@ -7,5 +7,22 @@
     <title>Juegos para Jugar</title>
 </head>
 <body>
+    <div class="portada">
+        <h1>tenemos dificultades tecnicas</h1>
+        <p>visita los otros enlaces en la parte de abajo</p>
+    </div>
+    <div class="homero">
+        <img src="homero.jpg">
+    </div>
+    <div class="box-enlaces">
+        <div class="box">
+            <h2>clikea aqui para ver camas</h2>
+            <a href="../2/index.html">clikea aqui para ver camas</a>
+        </div>
+        <div class="box">
+            <h2>clikea aqui para ver imagenes chistosas</h2>
+            <a href="../1/index.html">clikea aqui para ver imagenes chistosas</a>
+        </div>
+    </div>
 </body>
 </html>
