--- a/portadas/enlaces/2/index.html
+++ b/portadas/enlaces/2/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-        
+    <div class="portada">
+        <h1>camas horribles para dormir</h1>
+        <p>las peores camas para dormir</p>
+    </div>
+    <div class="imagen">
+        <img src="sherk.jpg">      
+    </div>
+    <div class="box-enlaces">
+        <div class="box">
+            <h2>clikea aqui para ver imagenes chistosas</h2>\
+            <a href="../1/index.html">clikea aqui</a>
+        </div>
+        <div class="box">
+            <h2>clikea aqui para ver juegos para jugar</h2>
+            <a href="../3/index.html">clikea aqui</a>
+        </div>
+        <div class="box">
+            <h2>clika aqui para volver a portal enlaces</h2>
+            <a href="../../index.html">clikea aqui</a>
+        </div>
+    </div>
 </body>
 </html>
